# API_PokemonCard

./: .env  .gitignore  pokemon.bd  pyproject.toml
app/: __init__.py  main.py
app/core/: database.py  settings.py
app/models/: _ _init_ _ .py  cards.py  vendas.py
app/routers/: cards.py  vendas.py
app/schemas/: card.py  venda.py
migrations/: env.py
migrations/versions/: d148f4cc2b5d_first_migrate.py
